Fixed white space and word overwrap via mobile

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -447,6 +447,8 @@ article {
     .section-items {
         > li {
             padding-left: 0;
+            word-wrap:break-word;
+            width:50%;
             span {
                 word-break: break-all;
             }
